# UniTASTestClients

./: .gitignore  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build-on-push.yml  dependabot-auto-merge.yml  update-flake-lock.yml
2022.3.41f1-base/Assets/: Assert.cs  LegacyInputSystemTest.cs  Results.cs  SceneTest.cs  UGuiTest.cs
2022.3.41f1-base/Assets/Editor/: AssetBundleStuff.cs
2022.3.41f1-base/Assets/Scenes/: FrameAdvancing.unity  MovieTest1.unity  Scene2.unity
2022.3.41f1-base/Assets/Scripts/: FrameAdvanceAnimator.cs  FrameAdvanceLegacyAnimation.cs  GeneralTests.cs  GeneralTests2.cs  GeneralTests3.cs  GeneralTests4.cs  GeneralTests5.cs  InitTests.cs  LegacyInputSystemTest.cs  MovieTest.cs  MovieTest2.cs  RuntimeInitTest.cs  SceneTest.cs  StructTest.cs
2022.3.41f1-base/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
3.0.0f5-base/ProjectSettings/: ProjectVersion.txt
MiscTestGame/Assets/: RuntimeInit.cs
MiscTestGame/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
NewInputSystem/Assets/: New Material 1.mat  New Material.mat  SomeScript.cs  TestFinder.cs
NewInputSystem/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
UnityShared/: Assert.cs
UnityShared/Editor/: Build.cs  TestFrameworkSetup.cs
UnityShared/Scripts/: Assert.cs  EventHooks.cs  TestFrameworkRuntime.cs
UnityShared/Tests/: AssetAsync__2022_3__6000_0_44f1.cs  InstantiateAsync__2022_3__6000_0_44f1.cs
hooks/: init-hooks.ps1  init-hooks.sh  post-checkout
nix/: build-test-runner.nix
test-runner/: Cargo.toml  local-test.sh
test-runner/src/: cli.rs  download.rs  fs_utils.rs  main.rs  movies.rs  symbols.rs  unitas_tests.rs
test-runner/src/download/: gh_api.rs
test-runner/src/unitas_tests/: unity_2022_3_41f1_base.rs  unity_2022_3_41f1_base_movie.lua  unity_latest.rs  utils.rs
unity-latest/ProjectSettings/: ProjectSettings.asset
unity_latest/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+59 files in other folders)
