[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"
description = "Tool to automatically execute unity games with UniTAS and BepInEx, and run tests on them"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
const_format = "0.2.34"
env_logger = "0.11.6"
indicatif = "0.17.11"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tokio-stream = "0.1.17"
zip = "4.3.0"
