[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"
description = "Tool to automatically execute unity games with UniTAS and BepInEx, and run tests on them"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
const_format = "0.2.34"
env_logger = "0.11.6"
indicatif = "0.18.0"
log = "0.4.28"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tokio-stream = "0.1.17"
zip = "5.1.1"
