[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"
description = "Tool to automatically execute unity games with UniTAS and BepInEx, and run tests on them"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
const_format = "0.2.35"
env_logger = "0.11.6"
indicatif = "0.18.3"
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tokio-stream = "0.1.17"
zip = "7.0.0"
